fix dashboard header on mobile add chashFlow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,9 @@
 .container {
   margin-left: 60px;
 }
+
+@media (max-width: 767px) {
+  .container {
+    margin-left: 0;
+  }
+}
